Fixed css on mobile
fixed css issues that came up on mobile

--- a/_sass/minima/_layout.scss
+++ b/_sass/minima/_layout.scss
@@ -139,12 +139,13 @@ h3 {
 
 .terminal {
   width: 100%;
-  height: 312px;
+  height: auto;
   background-color: #3d3d3d;
   border-radius: 2px;
   box-shadow: 0 4px 16px rgba(0,0,0,.40);
   display: flex;
   flex-direction: column;
+  padding: 0 0 24px 0;
 
   .terminalHeader {
     width: 100%;
